k8s-project/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
  - port: 80
